--- a/src/assets/styles/basics/helpers.scss
+++ b/src/assets/styles/basics/helpers.scss
@@ -151,7 +151,7 @@ button {
 }
 
 .MuiCard-root:not(.dark-mode) {
-  background-color: $neutral-gray !important;
+  // background-color: $neutral-gray !important;
 }
 
 .MuiPaper-root:has(.MuiMenu-list).dark-mode {
