--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -37,10 +37,32 @@
     }
 
     .weight-container {
+      // display: grid;
+      // grid-template-columns: minmax(120px, 1fr) auto;
       display: flex;
       align-items: end;
       justify-content: center;
       gap: 0.5rem;
+
+      .weekly-change {
+        &.has-change {
+          font-weight: 600;
+          &.positive {
+            color: $success-color;
+          }
+          &.negative {
+            color: $error-color;
+          }
+          &.dark-mode {
+            &.positive {
+              color: $success-color-dark-mode;
+            }
+            &.negative {
+              color: $error-color-dark-mode;
+            }
+          }
+        }
+      }
 
       .title {
         margin: 0;
