Enhance weekly change display in WeightChart with additional caption and styling

--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -45,6 +45,12 @@
       gap: 0.5rem;
 
       .weekly-change {
+        .since-last-week {
+          color: $dark-gray;
+          &.dark-mode {
+            color: $light-gray;
+          }
+        }
         &.has-change {
           font-weight: 600;
           &.positive {
