--- a/src/components/WeightChart/styles/WeightChart.scss
+++ b/src/components/WeightChart/styles/WeightChart.scss
@@ -44,32 +44,6 @@
       justify-content: center;
       gap: 0.5rem;
 
-      .weekly-change {
-        .since-last-week {
-          color: $dark-gray;
-          &.dark-mode {
-            color: $light-gray;
-          }
-        }
-        &.has-change {
-          font-weight: 600;
-          &.positive {
-            color: $success-color;
-          }
-          &.negative {
-            color: $error-color;
-          }
-          &.dark-mode {
-            &.positive {
-              color: $success-color-dark-mode;
-            }
-            &.negative {
-              color: $error-color-dark-mode;
-            }
-          }
-        }
-      }
-
       .title {
         margin: 0;
         font-size: 2rem;
@@ -97,6 +71,33 @@
         svg {
           width: 0.3rem;
           height: 0.3rem;
+        }
+      }
+    }
+  }
+  .weekly-change,
+  .range-change {
+    .since-last-week,
+    .since-last-range {
+      color: $dark-gray;
+      &.dark-mode {
+        color: $light-gray;
+      }
+    }
+    &.has-change {
+      font-weight: 600;
+      &.positive {
+        color: $success-color;
+      }
+      &.negative {
+        color: $error-color;
+      }
+      &.dark-mode {
+        &.positive {
+          color: $success-color-dark-mode;
+        }
+        &.negative {
+          color: $error-color-dark-mode;
         }
       }
     }
