--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -58,6 +58,7 @@
 @import '../../components/LineChart/styles/LineChart.scss';
 @import '../../components/LineChart/styles/LineChartControls.scss';
 @import '../../components/WeightChart/styles/WeightChart.scss';
+@import '../../components/WeightChangeDisplay/styles/WeightChangeDisplay.scss';
 @import '../../components/ProfileCard/styles/ProfileCard.scss';
 @import '../../components/GoalsCard/styles/GoalsCard.scss';
 @import '../../components/EditGoal/styles/EditGoal.scss';
