Add heb json file, lang switch button

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -86,6 +86,7 @@
 @import '../../pages/LiftMate/Workouts/styles/WorkoutsList.scss';
 @import '../../pages/LiftMate/Session/styles/Session.scss';
 @import '../../pages/LiftMate/Progress/styles/Progress.scss';
+@import '../../components/LanguageSwitch/styles/LanguageSwitch.scss';
 
 @import '../../components/ExercisesSearch/styles/ExercisesSearch.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/ExercisesStage.scss';
