--- a/src/components/EditIcon/styles/EditIcon.scss
+++ b/src/components/EditIcon/styles/EditIcon.scss
@@ -2,7 +2,7 @@
   .edit-button {
     position: absolute;
     top: 0.8rem;
-    right: 0.8rem;
+    inset-inline-end: 0.8rem;
     padding: 0.5rem;
 
     button {
