--- a/src/components/ProfileCard/styles/ProfileCard.scss
+++ b/src/components/ProfileCard/styles/ProfileCard.scss
@@ -40,41 +40,41 @@
 }
 
 .user-details {
-  border-left: 8px solid transparent !important;
+  border-inline-start: 8px solid transparent !important;
 
   &.selected {
-    border-left: 8px solid $primary-color !important;
+    border-inline-start: 8px solid $primary-color !important;
   }
 
   &.blue {
-    border-left: 8px solid $picker-color-blue !important;
+    border-inline-start: 8px solid $picker-color-blue !important;
   }
 
   &.red {
-    border-left: 8px solid $picker-color-red !important;
+    border-inline-start: 8px solid $picker-color-red !important;
   }
 
   &.yellow {
-    border-left: 8px solid $picker-color-yellow !important;
+    border-inline-start: 8px solid $picker-color-yellow !important;
   }
 
   &.green {
-    border-left: 8px solid $picker-color-green !important;
+    border-inline-start: 8px solid $picker-color-green !important;
   }
 
   &.orange {
-    border-left: 8px solid $picker-color-orange !important;
+    border-inline-start: 8px solid $picker-color-orange !important;
   }
 
   &.deepPurple {
-    border-left: 8px solid $picker-color-deep-purple !important;
+    border-inline-start: 8px solid $picker-color-deep-purple !important;
   }
 
   &.purple {
-    border-left: 8px solid $picker-color-purple !important;
+    border-inline-start: 8px solid $picker-color-purple !important;
   }
 
   &.pink {
-    border-left: 8px solid $picker-color-pink !important;
+    border-inline-start: 8px solid $picker-color-pink !important;
   }
 }
