--- a/src/CustomMui/CustomStepper/styles/CustomStepper.scss
+++ b/src/CustomMui/CustomStepper/styles/CustomStepper.scss
@@ -8,6 +8,12 @@
     min-height: 180px;
   }
 
+  &.rtl {
+    .MuiStepConnector-root {
+      left: calc(50% + 20px);
+      right: calc(-50% + 20px);
+    }
+  }
   .custom-stepper-footer {
     display: grid;
     gap: 0.5rem;
