--- a/src/components/EditGoal/styles/EditGoal.scss
+++ b/src/components/EditGoal/styles/EditGoal.scss
@@ -138,7 +138,7 @@
   }
 
   .animation-container {
-    margin-left: 1.5rem;
+    margin-inline-start: 1.5rem;
     &.date {
       svg {
         width: 300px;
