--- a/src/components/TraineeUserCard/styles/TraineeUserCard.scss
+++ b/src/components/TraineeUserCard/styles/TraineeUserCard.scss
@@ -23,6 +23,14 @@
 
   border-top: 1px solid $dark-gray;
   border-right: 1px solid $dark-gray;
+  &.rtl {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 1rem;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 0;
+    border-right: none;
+    border-left: 1px solid $dark-gray;
+  }
 
   &.hidden {
     transform: translateX(calc(-100% + 60px));
