Add is fixed menu switch, consitional rendering add log button based on that

--- a/src/components/ExerciseEditor/styles/ExerciseEditor.scss
+++ b/src/components/ExerciseEditor/styles/ExerciseEditor.scss
@@ -198,7 +198,11 @@
   .rpe-rir-container {
     padding-block: 0.5rem;
   }
-
+  .weight-picker {
+    &.rtl {
+      direction: rtl;
+    }
+  }
   .controls-container {
     display: grid;
     grid-auto-flow: column;
