Add conditional rendering FixedMenu content based on menu state

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -80,6 +80,8 @@
 @import '../../components/ItemFilter/styles/ItemFilter.scss';
 @import '../../components/ChangeExercise/styles/ChangeExercise.scss';
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
+@import '../../components/MealCard/styles/MealCard.scss';
+
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 @import '../../pages/LiftMate/Workouts/styles/Workouts.scss';
 @import '../../pages/LiftMate/Workouts/styles/WorkoutCard.scss';
