--- a/src/pages/MyTracker/FixedMenu/styles/FixedMenu.scss
+++ b/src/pages/MyTracker/FixedMenu/styles/FixedMenu.scss
@@ -14,4 +14,11 @@
       gap: 0.75rem;
     }
   }
+
+  .no-results-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
 }
