Add initial EditMenu cmp

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -81,6 +81,7 @@
 @import '../../components/ChangeExercise/styles/ChangeExercise.scss';
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../components/MealCard/styles/MealCard.scss';
+@import '../../components/EditMenu/styles/EditMenu.scss';
 
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 @import '../../pages/LiftMate/Workouts/styles/Workouts.scss';
