--- a/src/components/EditMenu/styles/EditMenu.scss
+++ b/src/components/EditMenu/styles/EditMenu.scss
@@ -1,16 +1,50 @@
 .edit-menu {
   padding: 1rem;
 
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
+  position: relative;
+  overflow-y: auto;
 
-  .edit-menu-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .stats-container {
+    // position: sticky;
+    // top: 0;
+
+    // z-index: 1000;
+    // background-color: $white;
+    // &.dark-mode {
+    //   background-color: $dark-gray;
+
+    //   &.blue {
+    //     background-color: $dark-gray-blue;
+    //   }
+    //   &.red {
+    //     background-color: $dark-gray-red;
+    //   }
+    //   &.yellow {
+    //     background-color: $dark-gray-yellow;
+    //   }
+    //   &.green {
+    //     background-color: $dark-gray-green;
+    //   }
+    //   &.deepPurple {
+    //     background-color: $dark-gray-deep-purple;
+    //   }
+    //   &.purple {
+    //     background-color: $dark-gray-purple;
+    //   }
+    //   &.pink {
+    //     background-color: $dark-gray-pink;
+    //   }
+    //   &.orange {
+    //     background-color: $dark-gray-orange;
+    //   }
+    // }
   }
 
   .meals-container {
+    // margin-top: 330px;
     display: grid;
     gap: 1rem;
   }
