--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -82,6 +82,8 @@
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../components/MealCard/styles/MealCard.scss';
 @import '../../components/EditMenu/styles/EditMenu.scss';
+@import '../../components/MenuCard/styles/MenuCard.scss';
+@import '../../components/MenusList/styles/MenusList.scss';
 
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 @import '../../pages/LiftMate/Workouts/styles/Workouts.scss';
