--- a/src/components/MenusList/styles/MenusList.scss
+++ b/src/components/MenusList/styles/MenusList.scss
@@ -1,7 +1,11 @@
+.slide-dialog-content {
+  .menus-list-container {
+    padding: 1rem;
+  }
+}
 .menus-list-container {
   display: grid;
   gap: 1rem;
-  // padding: 1rem;
 
   .menus-list {
     display: grid;
