Change Picker direction to be ltr always

--- a/src/components/Pickers/styles/Pickers.scss
+++ b/src/components/Pickers/styles/Pickers.scss
@@ -14,6 +14,10 @@
   // transform: translateZ(0);
   // contain: content;
 
+  .clock-picker {
+    direction: ltr;
+  }
+
   .buttons-container {
     display: grid;
     grid-auto-flow: column;
